# MCFMeshAnimator

./: .gitignore  CMakeLists.txt  README.md
cmake/: gtest.cmake
include/: mcf_skeleton.h  mean_curvature_flow.h  medial_axis_transform.h  remeshing.h  utils.h  visualization.h
src/: main_animate.cpp  main_gallery.cpp  preprocess_data.cpp  utils.cpp  visualization.cpp
src/remeshing/: collapse_short_edges.cpp  flip_optimal_edges.cpp  remeshing.cpp  split_long_edges.cpp  tangential_smoothing.cpp
src/skeletonization/: collapse_short_edges.cpp  mcf_skeleton.cpp  mean_curvature_flow.cpp  medial_axis_transform.cpp  split_bad_triangles.cpp
tests/: mat_test.cpp  remeshing_test.cpp
